# burned_embedder

./: .gitignore  03_undisturbed_sampling.ipynb  LICENSE  Makefile  README.md  TERRAFM_SETUP.md  download_terrafm.py  pyproject.toml  refs.bib  requirements.txt
burned_embedder/: analysis.py  data.py  distance_metrics.py  model.py  plot.py  preprocessing.py  radd_processing.py  utils.py
burned_embedder/classifier/: dataset.py  model.py
configs/: experiment_configs.py
data/processed/radd/: negative_samples_sequential.parquet  south_america_combined_clean.parquet
data/raw/radd/: Deforestation_alerts_(RADD).geojson
deforestation_embedder/: config.py  model.py
deforestation_embedder/classifier/: model_utils.py
models/final_classifier/: test_results.json  training_history.json
notebooks/: 00_base_notebook.ipynb  01_data_vis.ipynb  01_testing.ipynb  02_embeddings_vis.ipynb  05_test_classifier.ipynb  ThinkingEarth_hackathon_track1_demo1_classification.ipynb  deforest_cleaning.ipynb  main.ipynb  projection_check.ipynb
scripts/: 01_download_radd_tiles.py  02_find_deforest_areas.py  03_clean_deforest_areas.py  04_create_embeddings.py  04_find_stable_areas.py  05_create_seg_labels.py  05_load_sen_data.py  06_create_embeddings.py  06_load_sen_data.py  07_create_embeddings.py  07_train_model.py  08_create_val_report.py  08_train_chip_classifier.py  08_train_model.py  09_run_experiments.py  data_gen.py  deforest_data_gen.py  deforest_mask.py  download_radd_tiles.py  duebener_fire.py  load_data.py  load_sen_data.py  train_optimal_model.py
