[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "burned_embedder"
version = "0.0.1"
description = "Algining EO FM Embeddings for Burned Area detection"
authors = [
  { name = "Luis Maecker, Paul HOlzschuh" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["burned_embedder"]
include = ["pyproject.toml", "burned_embedder/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["burned_embedder"]
force-sort-within-sections = true

